--- a/smartbank24-kreditantrag-registrierung/src/main/resources/application.properties
+++ b/smartbank24-kreditantrag-registrierung/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.profiles.active = production
+
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=WARN
+
+
+spring.main.banner-mode=off
+
+spring.cloud.stream.kafka.binder.brokers=localhost:9092
+spring.cloud.stream.kafka.binder.auto-create-topics=true
+
+spring.cloud.stream.bindings.kreditantrag-registriert-out-0.destination=smartbank24-kreditantrag-registriert-topic
+spring.cloud.stream.bindings.kreditantrag-registriert-out-0.producer.partition-key-expression=payload.kreditantrag.creditApplicationId
+spring.cloud.stream.bindings.kreditantrag-registriert-out-0.contentType=application/json
 
